# discord_bot_template

./: .editorconfig  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
bot/: bot_client.py  settings.example.json  settings.py
bot/cogs/: cog_example.py  error_handler.py  owner.py
bot/orm/: db.py
tests/: conftest.py  test_example.py
