[tool.poetry]
name = "discord_bot_template"
version = "0.1.0"
description = ""
authors = ["John Victor <johnvictorfs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
peewee = "^3.8"
psycopg2-binary = "^2.7"
rich = "^10.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.910"
flake8-bugbear = "^21.4.3"
flake8-quotes = "^3.2.0"
"discord.py-stubs" = "^1.7.3"
isort = "^5.9.1"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
